old question finished upto 103

--- a/views/dca102onlineclasschapter1.ejs
+++ b/views/dca102onlineclasschapter1.ejs
@@ -265,7 +265,7 @@ utility programs and other software packages to various users working on the com
 </p><p>
 6. The operating system is primarily concerned with allocating and deallocating computer resources to => one or more jobs
 </p><p>
-7. ________ is responsible for controlling and directing process => Operating Syste
+7. ________ is responsible for controlling and directing process => Operating System
 </p><p>
 8. DOS => Disk Operating System
 </p><p>
@@ -284,16 +284,14 @@ utility programs and other software packages to various users working on the com
 </p><p>
 15. Operating System is a => Software program
 </p><p>
-16. The primary function of Operating System is => 
+18. The most commonly used Operating System is => Microsoft Windows
 </p><p>
-17. The most commonly used Operating System is => Microsoft Windows
-</p><p>
-18. Which of the following is not the function of Operating System? => Virus Removal <br> 
+19. Which of the following is not the function of Operating System? => Virus Removal <br> 
 { a) Processor management c) Virus Removal b) Input/Output management d) Scheduling }
 </p><p>
-19. A computer Operating System provides => User interface.
+20. A computer Operating System provides => User interface.
 </p><p>
-20. A program used to detect overall system malfunction is system diagnostic.
+21. A program used to detect overall system malfunction is system diagnostic.
 </p>
 
              
@@ -387,14 +385,14 @@ utility programs and other software packages to various users working on the com
                             var questionNumber = [];
                           
                           //question 1
-                          if(thisStudent.assignmentTheory102[i].mcq1 == 'Program') {
+                          if(thisStudent.assignmentTheory102[i].mcq1 == 'Virus Removal') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Linux') {
+                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Hardware') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -515,7 +513,7 @@ utility programs and other software packages to various users working on the com
             
                   <p class="fs-5 fw-light">
                     
-                    Q1. The set of instructions given to a computer to perform a task is called a __________.
+                    Q1. Which of the following is not the function of Operating System?
                     
                   </p>
                   
@@ -525,11 +523,11 @@ utility programs and other software packages to various users working on the com
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Program" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Processor management" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1">
                                   
-                                  Program
+                                  Processor management
                                   
                                 </label>
                                 
@@ -537,11 +535,11 @@ utility programs and other software packages to various users working on the com
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Instruction" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Virus Removal" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2">
                                   
-                                  Instruction
+                                  Virus Removal
                                   
                                 </label>
                                 
@@ -551,11 +549,11 @@ utility programs and other software packages to various users working on the com
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="Processor" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="Input/Output management" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3">
                                   
-                                  Processor
+                                   Input/Output management
                                   
                                 </label>
                                 
@@ -582,7 +580,7 @@ utility programs and other software packages to various users working on the com
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. ________ is a UNIX like operating system. It is free and open source program originally developed by Linus Torvalds in 1991 for personal computers.
+                    Q2. One of the primary function of the Operating System is to provide interface between the user and the ________.
                     
                   </p>
                   
@@ -592,11 +590,11 @@ utility programs and other software packages to various users working on the com
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Linux" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Hardware" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Linux
+                                  Hardware
                                   
                                 </label>
                                 
@@ -604,11 +602,11 @@ utility programs and other software packages to various users working on the com
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Boss" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Software" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  Boss
+                                  Software
                                   
                                 </label>
                                 
@@ -616,11 +614,11 @@ utility programs and other software packages to various users working on the com
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Android" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Peripheral" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                  Android
+                                  Peripheral
                                   
                                 </label>
                                 
@@ -768,7 +766,7 @@ utility programs and other software packages to various users working on the com
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                   Q5. File management, which includes organizing, naming, protecting, accessing and using files, is one of the key functions of an _________.
+                   Q5. ________ is responsible for controlling and directing process.
                    
                   </p>
                   
