--- a/views/dca102onlineclasschapter10.ejs
+++ b/views/dca102onlineclasschapter10.ejs
@@ -248,7 +248,7 @@ the OS then the computer is ready to be used, this process is called => Booting
 </p><p>
 7. To ensure have the latest version of windows Microsoft introduce a feature a called => Windows System update
 </p><p>
-8. When we click on start button of Windows 7 thE => Start Menu appear
+8. When we click on start button of Windows 7 the => Start Menu appear
 </p><p>
 9. The default web browser in Microsoft Windows 7 is => Internet Explorer
 </p><p>
@@ -395,14 +395,14 @@ the OS then the computer is ready to be used, this process is called => Booting
                             var questionNumber = [];
                           
                           //question 1
-                          if(thisStudent.assignmentTheory102[i].mcq1 == 'Wildcard') {
+                          if(thisStudent.assignmentTheory102[i].mcq1 == 'All primary file name') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Clipboard') {
+                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Virtual Memory') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -416,7 +416,7 @@ the OS then the computer is ready to be used, this process is called => Booting
                             questionNumber.push('Q3');
                           }
                            //question 4
-                          if(thisStudent.assignmentTheory102[i].mcq4 == 'Special') {
+                          if(thisStudent.assignmentTheory102[i].mcq4 == 'Main Memory') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -523,7 +523,7 @@ the OS then the computer is ready to be used, this process is called => Booting
             
                   <p class="fs-5 fw-light">
                     
-                    Q1.  A ________ character is a symbol used to replace or represent one or more characters.
+                    Q1.  The wildcard in <b>*.exe </b>represents ________ of executable file.
                     
                   </p>
                   
@@ -533,11 +533,11 @@ the OS then the computer is ready to be used, this process is called => Booting
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Special" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="All primary file name" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1">
                                   
-                                  Special
+                                  All primary file name
                                   
                                 </label>
                                 
@@ -545,11 +545,11 @@ the OS then the computer is ready to be used, this process is called => Booting
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Symbol" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value=" Only special character" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2">
                                   
-                                  Symbol
+                                   Only special character
                                   
                                 </label>
                                 
@@ -559,11 +559,11 @@ the OS then the computer is ready to be used, this process is called => Booting
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="MS-DOS" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="One-character primary filename only" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3">
                                   
-                                  MS-DOS
+                                  One-character primary filename only
                                   
                                 </label>
                                 
@@ -571,11 +571,11 @@ the OS then the computer is ready to be used, this process is called => Booting
                               
                               <div class="form-check ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="Wildcard" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="None of the above" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4">
                                   
-                                  Wildcard
+                                 None of the above
                                   
                                 </label>
                                 
@@ -590,7 +590,7 @@ the OS then the computer is ready to be used, this process is called => Booting
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. The ________ is a temporary holding area for information in computer memory.
+                    Q2. An illusion of extremely large main memory is called ________.
                     
                   </p>
                   
@@ -600,11 +600,11 @@ the OS then the computer is ready to be used, this process is called => Booting
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Clipart" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Cache memory" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Clipart
+                                  Cache memory
                                   
                                 </label>
                                 
@@ -612,11 +612,11 @@ the OS then the computer is ready to be used, this process is called => Booting
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Clipboard" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Virtual Memory" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  Clipboard
+                                  Virtual Memory
                                   
                                 </label>
                                 
@@ -624,11 +624,11 @@ the OS then the computer is ready to be used, this process is called => Booting
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="%Temp%" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="ROM" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                  %Temp%
+                                  ROM
                                   
                                 </label>
                                 
@@ -652,7 +652,7 @@ the OS then the computer is ready to be used, this process is called => Booting
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q3. FIFO is an acronym for ________ a method for organising and manipulating a data.
+                    Q3. Full form of FIFO is ________.
                     
                   </p>
                   
@@ -714,7 +714,7 @@ the OS then the computer is ready to be used, this process is called => Booting
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q4. @, %, $, & are example of ________ characters.
+                    Q4. After the computer is switch ON the OS is loaded into Computer's ________.
                     
                   </p>
                   
@@ -724,11 +724,11 @@ the OS then the computer is ready to be used, this process is called => Booting
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Symbol" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Secondary Memory" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q4">
                                   
-                                  Symbol
+                                  Secondary Memory
                                   
                                 </label>
                                 
@@ -736,11 +736,11 @@ the OS then the computer is ready to be used, this process is called => Booting
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="Wildcard" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="Main Memory" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q4">
                                   
-                                   Wildcard
+                                  Main Memory
                                   
                                 </label>
                                 
@@ -748,11 +748,11 @@ the OS then the computer is ready to be used, this process is called => Booting
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="Special" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="Hard Disk" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q4">
                                   
-                                  Special
+                                  Hard Disk
                                   
                                 </label>
                                 
