--- a/views/dca102onlineclasschapter2.ejs
+++ b/views/dca102onlineclasschapter2.ejs
@@ -306,7 +306,7 @@ the category are as follows.</p>
 </p><p>
 5. Example of single tasking OS is => DOS
 </p><p>
-6. LINUX is a => LINUX
+6. LINUX is a => Multi user OS
 </p><p>
 7. DOS is single user OS which is developed in => 1980's
 </p><p>
@@ -352,7 +352,7 @@ the category are as follows.</p>
 </p><p>
 27. On MS-DOS, file names are case-insensitive and limited to eight characters, plus optionally a period and three more characters.
 </p><p>
-28. What is the default size limitation of MS DOS file name:? => 8,3
+28. What is the default size limitation of MS DOS file name? => 8,3
 </p><p>
 29. DLL => Dynamic Linked Library
 </p><p>
@@ -361,8 +361,6 @@ the category are as follows.</p>
 31. PIXEL => Picture Element
 </p><p>
 32. Essential windows tool are located in => Accessories
-
-33. 
 </p>
 
              
@@ -456,14 +454,14 @@ the category are as follows.</p>
                             var questionNumber = [];
                           
                           //question 1
-                          if(thisStudent.assignmentTheory102[i].mcq1 == 'Real-time Operating System (RTOS)') {
+                          if(thisStudent.assignmentTheory102[i].mcq1 == 'Multi user OS') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Single-user, multi-tasking') {
+                          if(thisStudent.assignmentTheory102[i].mcq2 == '1980\'s') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -477,14 +475,14 @@ the category are as follows.</p>
                             questionNumber.push('Q3');
                           }
                            //question 4
-                          if(thisStudent.assignmentTheory102[i].mcq4 == 'driver') {
+                          if(thisStudent.assignmentTheory102[i].mcq4 == '8,3') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q4');
                           }
                            //question 5
-                          if(thisStudent.assignmentTheory102[i].mcq5 == 'Decryption') {
+                          if(thisStudent.assignmentTheory102[i].mcq5 == 'Dynamic Linked Library') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -584,7 +582,7 @@ the category are as follows.</p>
             
                   <p class="fs-5 fw-light">
                     
-                    Q1. __________ is primarily used to control machinery, scientific instruments and industrial systems. 
+                    Q1. LINUX is a ________.
                     
                   </p>
                   
@@ -594,11 +592,12 @@ the category are as follows.</p>
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Multi-user, multi-tasking" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Multi user OS" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1">
                                   
-                                  Multi-user, multi-tasking
+                                 Multi user OS
+
                                   
                                 </label>
                                 
@@ -606,11 +605,11 @@ the category are as follows.</p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Single Use/Single Tasking Operating System" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Single tasking OS" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2">
                                   
-                                  Single Use/Single Tasking Operating System
+                                  Single tasking OS
                                   
                                 </label>
                                 
@@ -632,11 +631,11 @@ the category are as follows.</p>
                               
                               <div class="form-check ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="Single-user, multi-tasking" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="Single user OS" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4">
                                   
-                                  Single-user, multi-tasking
+                                  Single user OS
                                   
                                 </label>
                                 
@@ -651,7 +650,7 @@ the category are as follows.</p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. This is the type of operating system most people use on their desktop and laptop computers today.
+                    Q2. DOS is single user OS which is developed in ________.
                     
                   </p>
                   
@@ -661,11 +660,11 @@ the category are as follows.</p>
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Single-user, multi-tasking" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="1980's" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Single-user, multi-tasking
+                                  1980's
                                   
                                 </label>
                                 
@@ -673,11 +672,11 @@ the category are as follows.</p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Real-time Operating System (RTOS)" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="1960's" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  Real-time Operating System (RTOS)
+                                  1960's
                                   
                                 </label>
                                 
@@ -685,11 +684,11 @@ the category are as follows.</p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Single Use/Single Tasking Operating System" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="1970's" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                  Single Use/Single Tasking Operating System
+                                  1970's
                                   
                                 </label>
                                 
@@ -697,11 +696,11 @@ the category are as follows.</p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Multi-user, multi-tasking" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="None of the above" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q2">
                                   
-                                  Multi-user, multi-tasking
+                                  None of the above
                                   
                                 </label>
                                 
@@ -775,7 +774,7 @@ the category are as follows.</p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q4. A device ________ is a software program that controls a particular type of hardware device that is attached to a computer.
+                    Q4. What is the default size limitation of MS DOS file name _________.
                     
                   </p>
                   
@@ -785,11 +784,11 @@ the category are as follows.</p>
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="program" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="255,3" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q4">
                                   
-                                  program
+                                  255,3
                                   
                                 </label>
                                 
@@ -797,11 +796,11 @@ the category are as follows.</p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="driver" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="8,16" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q4">
                                   
-                                  driver
+                                  8,16
                                   
                                 </label>
                                 
@@ -809,11 +808,11 @@ the category are as follows.</p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="software" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="8,3" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q4">
                                   
-                                  software
+                                  8,3
                                   
                                 </label>
                                 
@@ -837,7 +836,7 @@ the category are as follows.</p>
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                   Q5. ________ is converting the encrypted data back to its original form.
+                   Q5. Full form of DLL is ________.
                    
                   </p>
                   
@@ -847,11 +846,11 @@ the category are as follows.</p>
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault1Q5" value="Converter" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault1Q5" value="Dual Linking Library" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q5">
                                   
-                                  Converter
+                                  Dual Linking Library
                                   
                                 </label>
                                 
@@ -859,11 +858,11 @@ the category are as follows.</p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault2Q5" value="Encryption" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault2Q5" value="Dynamic Linked Library" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q5">
                                   
-                                  Encryption
+                                  Dynamic Linked Library
                                   
                                 </label>
                                 
@@ -871,11 +870,11 @@ the category are as follows.</p>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault3Q5" value="Decryption" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault3Q5" value="Dynamic Library Linking" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q5">
                                   
-                                  Decryption
+                                  Dynamic Library Linking
                                   
                                 </label>
                                 
