--- a/views/dca102onlineclasschapter3.ejs
+++ b/views/dca102onlineclasschapter3.ejs
@@ -344,14 +344,14 @@ and the latest in the series is  Windows  10  (July  29, 2015).
                             questionNumber.push('Q2');
                           }
                           //question 3
-                          if(thisStudent.assignmentTheory102[i].mcq3 == 'October, 2009') {
+                          if(thisStudent.assignmentTheory102[i].mcq3 == '1990') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q3');
                           }
                            //question 4
-                          if(thisStudent.assignmentTheory102[i].mcq4 == 'Windows 10') {
+                          if(thisStudent.assignmentTheory102[i].mcq4 == 'Microsoft Windows') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -587,7 +587,7 @@ and the latest in the series is  Windows  10  (July  29, 2015).
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q3. Windows 7 was released on ________.
+                    Q3. In which year Microsoft Windows 3.0 introduced ________.
                     
                   </p>
                   
@@ -597,11 +597,11 @@ and the latest in the series is  Windows  10  (July  29, 2015).
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault1Q3" value="October, 2009" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault1Q3" value="2009" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q3">
                                   
-                                  October, 2009
+                                  2009
                                   
                                 </label>
                                 
@@ -609,11 +609,11 @@ and the latest in the series is  Windows  10  (July  29, 2015).
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault2Q3" value="October, 2000" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault2Q3" value="2000" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q3">
                                   
-                                  October, 2000
+                                  2000
                                   
                                 </label>
                                 
@@ -621,11 +621,11 @@ and the latest in the series is  Windows  10  (July  29, 2015).
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault3Q3" value="November, 2009" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault3Q3" value="1990" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q3">
                                   
-                                  November, 2009
+                                  1990
                                   
                                 </label>
                                 
@@ -649,7 +649,7 @@ and the latest in the series is  Windows  10  (July  29, 2015).
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q4. The latest version of Microsoft Windows series is ________.
+                    Q4. Which of the following is world's largest selling OS for PC ________.
                     
                   </p>
                   
@@ -659,11 +659,11 @@ and the latest in the series is  Windows  10  (July  29, 2015).
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Windows 7" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Mac OS" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q4">
                                   
-                                  Windows 7
+                                  Mac OS
                                   
                                 </label>
                                 
@@ -671,11 +671,11 @@ and the latest in the series is  Windows  10  (July  29, 2015).
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="Windows 8" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="Android OS" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q4">
                                   
-                                  Windows 8
+                                  Android OS 
                                   
                                 </label>
                                 
@@ -683,11 +683,11 @@ and the latest in the series is  Windows  10  (July  29, 2015).
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="Windows 2021" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="Linux" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q4">
                                   
-                                  Windows 2021
+                                  Linux
                                   
                                 </label>
                                 
@@ -695,11 +695,11 @@ and the latest in the series is  Windows  10  (July  29, 2015).
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault4Q4" value="Windows 10" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault4Q4" value="Microsoft Windows" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q4">
                                   
-                                  Windows 10
+                                  Microsoft Windows
                                   
                                 </label>
                                 
