--- a/views/dca102onlineclasschapter4.ejs
+++ b/views/dca102onlineclasschapter4.ejs
@@ -394,7 +394,7 @@ iii) On the extreme right is the notification area.
                             questionNumber.push('Q3');
                           }
                            //question 4
-                          if(thisStudent.assignmentTheory102[i].mcq4 == 'Tab, Spacebar') {
+                          if(thisStudent.assignmentTheory102[i].mcq4 == 'Search') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -567,7 +567,7 @@ iii) On the extreme right is the notification area.
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. ________ are small pictures seen on the desktop.
+                    Q2. Pictorial representation of an item/program is called ________
                     
                   </p>
                   
@@ -691,7 +691,7 @@ iii) On the extreme right is the notification area.
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q4. Using the keyboard, you can press the ________ key to move between sections and press the ________ to select them. 
+                    Q4. Which of the following is part of start menu in windows 7 ________. 
                     
                   </p>
                   
@@ -701,23 +701,23 @@ iii) On the extreme right is the notification area.
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="Tab, Enter" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault1Q4" value="MS Paint" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q4">
                                   
-                                  Tab, Enter
-                                  
+                                  MS Paint
+                          
                                 </label>
                                 
                               </div>
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="Spacebar, Enter" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault2Q4" value="Search" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q4">
                                   
-                                  Spacebar, Enter
+                                  Search
                                   
                                 </label>
                                 
@@ -725,11 +725,11 @@ iii) On the extreme right is the notification area.
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="Tab, Spacebar" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault3Q4" value="Disk management" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q4">
                                   
-                                  Tab, Spacebar
+                                  Disk management
                                   
                                 </label>
                                 
@@ -737,11 +737,11 @@ iii) On the extreme right is the notification area.
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                              <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault4Q4" value="Windows key, Tab" required>
+                              <input class="form-check-input" type="radio" name="dcaMCQ4" id="flexRadioDefault4Q4" value="Windows key" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q4">
                                   
-                                  Windows key, Tab
+                                  Windows key
                                   
                                 </label>
                                 
