--- a/views/dca102onlineclasschapter5.ejs
+++ b/views/dca102onlineclasschapter5.ejs
@@ -387,7 +387,7 @@ Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin t
                             var questionNumber = [];
                           
                           //question 1
-                          if(thisStudent.assignmentTheory102[i].mcq1 == 'letter, docx') {
+                          if(thisStudent.assignmentTheory102[i].mcq1 == 'file') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -515,7 +515,7 @@ Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin t
             
                   <p class="fs-5 fw-light">
                     
-                    Q1. In letter.docx, the filename is ________ and the extension is ________. 
+                    Q1. A collection of information which is given a name and stores in a disk is called 
                     
                   </p>
                   
@@ -551,11 +551,11 @@ Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin t
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="letter, docx" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="file" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3">
                                   
-                                  letter, docx
+                                  file
                                   
                                 </label>
                                 
@@ -563,11 +563,11 @@ Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin t
                               
                               <div class="form-check ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="Microsoft Office Word" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="folder" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4">
                                   
-                                  Microsoft Office Word
+                                  folder
                                   
                                 </label>
                                 
@@ -769,7 +769,7 @@ Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin t
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                   Q5.  To rename a file or folder, select and press _______.
+                   Q5. To rename a file in Windows 7 we press _______.
                    
                   </p>
                   
