--- a/views/dca102onlineclasschapter6.ejs
+++ b/views/dca102onlineclasschapter6.ejs
@@ -152,7 +152,7 @@
                           
                           <figure class="figure">
   
-                            <img src="/img/windows_start_menu.jpg" class="float-end img-fluid ps-2 pb-2" width="600" height="400" alt="windows_start_menu" />
+                            <img src="/img/windows_start_menu.jpg" class="float-end img-fluid ps-2 pb-2" alt="windows_start_menu" />
                             
                             <figcaption class="figure-caption ps-2 text-danger"> Window Start Menu.</figcaption>
                             
@@ -336,7 +336,7 @@
 12. The function key ________ open help window in windows OS => F1
 </p><p>
 13. Which of the following Windows 7 features helps in connecting offices
-network computer even if the computer does not have internet connection => LAN
+network computer even if the computer does not have internet connection => Internet connection sharing
 </p><p>
 14. Which is not Microsoft windows job => Uninterrupted Power Management
 </p><p>
@@ -452,14 +452,14 @@ network computer even if the computer does not have internet connection => LAN
                             var questionNumber = [];
                           
                           //question 1
-                          if(thisStudent.assignmentTheory102[i].mcq1 == 'Windows key') {
+                          if(thisStudent.assignmentTheory102[i].mcq1 == 'Original Equipment Manufacturer') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Control Panel') {
+                          if(thisStudent.assignmentTheory102[i].mcq2 == 'All Programs') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -480,7 +480,7 @@ network computer even if the computer does not have internet connection => LAN
                             questionNumber.push('Q4');
                           }
                            //question 5
-                          if(thisStudent.assignmentTheory102[i].mcq5 == 'winword') {
+                          if(thisStudent.assignmentTheory102[i].mcq5 == 'All of the above') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -579,7 +579,7 @@ network computer even if the computer does not have internet connection => LAN
             
                   <p class="fs-5 fw-light">
                     
-                    Q1. To get started Windows Start Menu, you can press Start button or press ________ on the keyboard.
+                    Q1. Full form of OEM is ________.
                     
                   </p>
                   
@@ -589,11 +589,11 @@ network computer even if the computer does not have internet connection => LAN
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Shift + Alt key" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Optical Equipment Machine" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1">
                                   
-                                  Shift + Alt key
+                                  Optical Equipment Machine
                                   
                                 </label>
                                 
@@ -601,11 +601,11 @@ network computer even if the computer does not have internet connection => LAN
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Control key" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Original Equipment Manufacturer" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2">
                                   
-                                  Control key
+                                  Original Equipment Manufacturer
                                   
                                 </label>
                                 
@@ -615,11 +615,11 @@ network computer even if the computer does not have internet connection => LAN
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="Enter key" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="Original Equipment Machine" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3">
                                   
-                                  Enter key
+                                  Original Equipment Machine
                                   
                                 </label>
                                 
@@ -627,11 +627,11 @@ network computer even if the computer does not have internet connection => LAN
                               
                               <div class="form-check ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="Windows key" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="None of the above" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4">
                                   
-                                  Windows key
+                                  None of the above
                                   
                                 </label>
                                 
@@ -646,7 +646,7 @@ network computer even if the computer does not have internet connection => LAN
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. ________ helps change the settings and customise the functionality of your computer.
+                    Q2. Which one of the following contain many application you can run ________.
                     
                   </p>
                   
@@ -656,11 +656,11 @@ network computer even if the computer does not have internet connection => LAN
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Control Panel" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Search" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Control Panel
+                                  Search
                                   
                                 </label>
                                 
@@ -832,7 +832,7 @@ network computer even if the computer does not have internet connection => LAN
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                   Q5.  To run Microsoft Word, type and enter ________ command into the run dialog box.
+                   Q5.  Control panel in Windows 7 include setting of ________.
                    
                   </p>
                   
@@ -842,11 +842,11 @@ network computer even if the computer does not have internet connection => LAN
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault1Q5" value="msword" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault1Q5" value="Date & Time" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q5">
                                   
-                                  msword
+                                Date & Time
                                   
                                 </label>
                                 
@@ -854,11 +854,11 @@ network computer even if the computer does not have internet connection => LAN
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault2Q5" value="microsoft word" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault2Q5" value="Password" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q5">
                                   
-                                  microsoft word
+                                  Password
                                   
                                 </label>
                                 
@@ -866,11 +866,11 @@ network computer even if the computer does not have internet connection => LAN
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault3Q5" value="word" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault3Q5" value="Sound" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q5">
                                   
-                                  word
+                                  Sound
                                   
                                 </label>
                                 
@@ -878,11 +878,11 @@ network computer even if the computer does not have internet connection => LAN
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault4Q5" value="winword" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ5" id="flexRadioDefault4Q5" value="All of the above" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q5">
                                   
-                                  winword
+                                  All of the above
                                   
                                 </label>
                                 
