--- a/views/dca102onlineclasschapter7.ejs
+++ b/views/dca102onlineclasschapter7.ejs
@@ -345,14 +345,14 @@ d) All of the above statement is true }
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory102[i].mcq2 == 'pointer') {
+                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Small arrow in the lower left corner') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q2');
                           }
                           //question 3
-                          if(thisStudent.assignmentTheory102[i].mcq3 == 'Send to') {
+                          if(thisStudent.assignmentTheory102[i].mcq3 == 'All of the above') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -520,7 +520,7 @@ d) All of the above statement is true }
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. A shortcut is a ________ to an object, and not the object itself.
+                    Q2. Shortcut icon are the icon with ________.
                     
                   </p>
                   
@@ -530,11 +530,11 @@ d) All of the above statement is true }
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="tools" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Small arrow in the upper right corner" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  tools
+                                  Small arrow in the upper right corner
                                   
                                 </label>
                                 
@@ -542,11 +542,11 @@ d) All of the above statement is true }
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="shortcut" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Small arrow in the lower right corner" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  shortcut
+                                  Small arrow in the lower right corner
                                   
                                 </label>
                                 
@@ -554,11 +554,11 @@ d) All of the above statement is true }
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="pointer" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Small arrow in the lower left corner" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                  pointer
+                                  Small arrow in the lower left corner
                                   
                                 </label>
                                 
@@ -566,11 +566,11 @@ d) All of the above statement is true }
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="command" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Small arrow in the upper left corner" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q2">
                                   
-                                 command
+                                 Small arrow in the upper left corner
                                   
                                 </label>
                                 
@@ -582,7 +582,7 @@ d) All of the above statement is true }
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q3. To add a Folder Shortcut to the Desktop, right click on the folder and chooose ________.
+                    Q3. A shortcut can be located ________.
                     
                   </p>
                   
@@ -592,11 +592,11 @@ d) All of the above statement is true }
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault1Q3" value="New Folder" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault1Q3" value="In Desktop only" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q3">
                                   
-                                  New Folder
+                                  In Desktop only
                                   
                                 </label>
                                 
@@ -604,11 +604,11 @@ d) All of the above statement is true }
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault2Q3" value="Send to" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault2Q3" value="In the Taskbar" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q3">
                                   
-                                  Send to
+                                  In the Taskbar
                                   
                                 </label>
                                 
@@ -616,11 +616,11 @@ d) All of the above statement is true }
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault3Q3" value="Shortcut" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault3Q3" value="Anywhere on local disk" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q3">
                                   
-                                  Shortcut
+                                  Anywhere on local disk
                                   
                                 </label>
                                 
@@ -628,11 +628,11 @@ d) All of the above statement is true }
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault4Q3" value="None of the above" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ3" id="flexRadioDefault4Q3" value="All of the above" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q3">
                                   
-                                  None of the above
+                                  All of the above
                                   
                                 </label>
                                 
