--- a/views/dca102onlineclasschapter8.ejs
+++ b/views/dca102onlineclasschapter8.ejs
@@ -154,7 +154,7 @@
                           
                           <figure class="figure">
   
-                            <img src="/img/windows_accessories.jpg" class="float-end img-fluid ps-2 pb-2" width="400" height="540" alt=" Windows Accessories" />
+                            <img src="/img/windows_accessories.jpg" class="float-end img-fluid ps-2 pb-2" alt=" Windows Accessories" />
                             
                             <figcaption class="figure-caption ps-2 text-danger"> Windows Accessories and System Tools.</figcaption>
                             
@@ -265,7 +265,8 @@ Entertainment:</code> The entertainment tools, such as Sound Recorder, volume Co
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. Calculator provided in windows can operate in two option namely =>  Standard and Scientific
+1. Calculator provided in windows can operate in two option namely =>  Standard and Scientific <br>
+Note: <em>Hei hi Windows XP zir hun laia question a ni maithei a. Windows 7 ah chuan calculator-ah hian programmer leh statistics pawh a tel tawh a ni. </em>
 </p><p>
 2. To Open Calculator: Click Start button, Choose all programs, high
 light Accessories and then choose calculator.
@@ -315,9 +316,8 @@ programs and then we highlight => Accessories
 </p><p>
 24. In process scheduling stack is also known as => FIFO
 </p><p>
-25. AGP stands fo => Accelerated Graphic Port
+25. AGP stands for => Accelerated Graphic Port
 </p>
-
 
                       </div>
                   
@@ -408,14 +408,14 @@ programs and then we highlight => Accessories
                             var questionNumber = [];
                           
                           //question 1
-                          if(thisStudent.assignmentTheory102[i].mcq1 == 'Choose Start button > All Programs > Accessories > Calculator') {
+                          if(thisStudent.assignmentTheory102[i].mcq1 == 'Editing textual data') {
                             correctCount++;
                           } else {
                             incorrect++;
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Choose Start button > All Programs > Accessories > System Tools > Control Panel') {
+                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Wordpad') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -536,7 +536,7 @@ programs and then we highlight => Accessories
             
                   <p class="fs-5 fw-light">
                     
-                    Q1. To open calculator, go to ________.
+                    Q1. A notepad is useful for ________.
                     
                   </p>
                   
@@ -546,11 +546,11 @@ programs and then we highlight => Accessories
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Choose Start button > All Programs > Accessories > Calc" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault1" value="Editing textual data" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1">
                                   
-                                  Choose Start button > All Programs > Accessories > Calc
+                                  Editing textual data
                                   
                                 </label>
                                 
@@ -558,11 +558,11 @@ programs and then we highlight => Accessories
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Choose Start button > All Programs > Calculator" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault2" value="Playing sound" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2">
                                   
-                                  Choose Start button > All Programs > Calculator
+                                  Playing sound
                                   
                                 </label>
                                 
@@ -572,11 +572,11 @@ programs and then we highlight => Accessories
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="Choose Start button > All Programs > Accessories > Calculator" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault3" value="Editing Graphic" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3">
                                   
-                                  Choose Start button > All Programs > Accessories > Calculator
+                                  Editing Graphic
                                   
                                 </label>
                                 
@@ -584,11 +584,11 @@ programs and then we highlight => Accessories
                               
                               <div class="form-check ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="Choose Start button > Accessories > Calculator" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ1" id="flexRadioDefault4" value="Drawing" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4">
                                   
-                                  Choose Start button > Accessories > Calculator
+                                  Drawing
                                   
                                 </label>
                                 
@@ -603,7 +603,7 @@ programs and then we highlight => Accessories
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. To go to control panel, _______.
+                    Q2. Word Processor that comes with windows Operating System is _________.
                     
                   </p>
                   
@@ -613,11 +613,11 @@ programs and then we highlight => Accessories
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Choose Start button > All Programs > Accessories > System Tools > Control Panel" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Notepad" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Choose Start button > All Programs > Accessories > System Tools > Control Panel
+                                  Notepad
                                   
                                 </label>
                                 
@@ -625,11 +625,11 @@ programs and then we highlight => Accessories
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Choose Start button > All Programs > System Tools > Control Panel" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Paint" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  Choose Start button > All Programs > System Tools > Control Panel
+                                  Paint
                                   
                                 </label>
                                 
@@ -637,11 +637,11 @@ programs and then we highlight => Accessories
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Choose Start button > Control Panel" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Wordpad" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                  Choose Start button > Control Panel
+                                  Wordpad
                                   
                                 </label>
                                 
@@ -649,11 +649,11 @@ programs and then we highlight => Accessories
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Choose Start button > All Programs > Control Panel" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Ms word" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q2">
                                   
-                                 Choose Start button > All Programs > Control Panel
+                                 Ms word
                                   
                                 </label>
                                 
@@ -665,7 +665,7 @@ programs and then we highlight => Accessories
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q3. ________ is used for adding hardware, installing and uninstalling software, controlling user accounts, and changing accessibility options.
+                    Q3. Which start menu allow us to change date and time ________.
                     
                   </p>
                   
