--- a/views/dca102onlineclasschapter9.ejs
+++ b/views/dca102onlineclasschapter9.ejs
@@ -157,9 +157,10 @@
 
                     <div class="accordion-body">
             
-                      <p>Microsoft Windows a lo chhuah hma chuan Computer hi MS-DOS hmanga khawih leh run ngai a ni a. Mi nawlpui tan hman a nuam lovin thiam a harsa a,
-                      a thiam tan pawh buaithlakna chin tam tak a awm ngei ang. Windows version a lo chhuah hnuah erawh chuan a lema click theih (Graphical User Interface)
-                      a nih avangin khawih leh hman pawh a nuam ta hle a ni.</p><p>
+                      <p>Microsoft Windows a lo chhuah hma chuan Computer hi MS-DOS hmanga khawih leh run ngai a ni a. MS-DOS chu keyboard hmanga type luh a,
+                      control (Character User Interface) a ni a. Mi nawlpui tan hman a nuam lovin thiam a harsa hle a ni.
+                      Windows version a lo chhuah hnuah erawh chuan a lema click theih (Graphical User Interface)
+                      a nih avangin khawih leh hman pawh a nuam ta hle a ni. </p><p>
                         
                       A lema kan hmuh hi command prompt / MS-DOS command chu a ni a. Tun thlengin computer-ah hian hman theihin a la awm a ni. Computer zir tirh chuan a tangkaina
                       a tam loh hmel viau thin a, amaherawhchu, hetiang command line hi a tangkai em em a, a powerful bawk a, 
@@ -167,7 +168,7 @@
                           
                           <figure class="figure">
   
-                            <img src="/img/commandPrompt.jpg" class="float-end img-fluid ps-2 pb-2" width="600" height="540" alt="Command Prompt" />
+                            <img src="/img/commandPrompt.jpg" class="float-end img-fluid ps-2 pb-2" alt="Command Prompt" />
                             
                             <figcaption class="figure-caption ps-2 text-danger"> Command Prompt </figcaption>
                             
@@ -506,7 +507,7 @@ The most common MS-DOS internal command is listed below:-
                             questionNumber.push('Q1');
                           }
                           //question 2
-                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Click Start Button > All Programs > Accessories > Command Prompt') {
+                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Date only') {
                             correctCount++;
                           } else {
                             incorrect++;
@@ -694,7 +695,7 @@ The most common MS-DOS internal command is listed below:-
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                    Q2. To get command prompt, do this _______.
+                    Q2. DOS Command 'date' shows ________.
                     
                   </p>
                   
@@ -704,11 +705,11 @@ The most common MS-DOS internal command is listed below:-
       
                             <div class="form-check mb-1 ms-3">
                               
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Choose Start button > Run > Acccessories > Command Prompt" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault1Q2" value="Nothing" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault1Q2">
                                   
-                                  Choose Start button > Run > Acccessories > Command Prompt
+                                  Nothing
                                   
                                 </label>
                                 
@@ -716,11 +717,11 @@ The most common MS-DOS internal command is listed below:-
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Choose Start button > Run > Command Prompt" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault2Q2" value="Time Only" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault2Q2">
                                   
-                                  Choose Start button > Run > Command Prompt
+                                  Time Only
                                   
                                 </label>
                                 
@@ -728,11 +729,11 @@ The most common MS-DOS internal command is listed below:-
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Choose Start button > Control Panel > Command Prompt" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault3Q2" value="Current date and Times" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault3Q2">
                                   
-                                  Choose Start button > Control Panel > Command Prompt
+                                  Current date and Time
                                   
                                 </label>
                                 
@@ -740,11 +741,11 @@ The most common MS-DOS internal command is listed below:-
                               
                               <div class="form-check mb-1 ms-3">
                                 
-                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Click Start Button > All Programs > Accessories > Command Prompt" required>
+                                <input class="form-check-input" type="radio" name="dcaMCQ2" id="flexRadioDefault4Q2" value="Date only" required>
                                 
                                 <label class="form-check-label" for="flexRadioDefault4Q2">
                                   
-                                 Click Start Button > All Programs > Accessories > Command Prompt
+                                 Date only
                                   
                                 </label>
                                 
@@ -880,7 +881,7 @@ The most common MS-DOS internal command is listed below:-
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                   Q5.  ATTRIB is MS-DOS ________ command.
+                   Q5.  DIR, COPY, MD, CD, CLS, TIME are ________ command.
                    
                   </p>
                   
