--- a/views/dca102welcomepage.ejs
+++ b/views/dca102welcomepage.ejs
@@ -22,7 +22,7 @@
             <p class="fw-normal">Tunah hian subject pahnihna (a code hming <code> DCA-102) </code>kan zir dawn a, 
                a subject hming chu  <code> Operating System </code> a ni. 
                Kan hriat angin tuna kan zir tur hi theory a ni dawn a. 
-               Syllabus milin kan zir dawn a ni. 
+               Syllabus milin kan zir ang a, question hlui kan zir tel bawk dawn a ni.
             </p>
             <h5 class="text-dark fw-normal mt-4 ">DCA-102 Chapter te</h5>
             <p class="fw-normal mb-4 small ">(I zir tur chapter zelah click ang che.)</p>
