--- a/views/dca103onlineclasschapter1.ejs
+++ b/views/dca103onlineclasschapter1.ejs
@@ -130,7 +130,7 @@
             
                       <figure class="figure">
   
-                            <img src="/img/msoffice_awmna.jpg" class="float-end img-fluid ps-2 pb-2" width="500" height="540" alt="Ms Word Installed Location" />
+                            <img src="/img/msoffice_awmna.jpg" class="float-end img-fluid ps-2 pb-2" alt="Ms Word Installed Location" />
                             
                             <figcaption class="figure-caption ps-2 text-danger"> Ms Word Installed Location.</figcaption>
                             
@@ -139,7 +139,7 @@
                             
                         <figure class="figure">
   
-                            <img src="/img/wordScreen.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="540" alt="The Word Screen" />
+                            <img src="/img/wordScreen.jpg" class="float-end img-fluid ps-2 pb-2" alt="The Word Screen" />
                             
                             <figcaption class="figure-caption ps-2 text-danger"> The Word Screen </figcaption>
                             
@@ -185,40 +185,40 @@ Word from Microsoft is the most widely used word processor across the world.
 </p>
 
 <p>
-1.	<code>Document creation area</code> is the one where you will type the documents.
+1.  <code>Document creation area</code> is the one where you will type the documents.
 </p><p>
-2.	<code>Blinking insertion point or Cursor</code> indicates where the text you type will appear.
+2.  <code>Blinking insertion point or Cursor</code> indicates where the text you type will appear.
 </p><p>
-3.	<code>Word screen</code> is made up of five essential parts: Office button, Quick Access toolbar, Ribbon, Document creation area and the Status bar.
+3.  <code>Word screen</code> is made up of five essential parts: Office button, Quick Access toolbar, Ribbon, Document creation area and the Status bar.
 </p><p>
-4.	<code>Office button</code> helps to open, save or print document.
+4.  <code>Office button</code> helps to open, save or print document.
 </p><p>
-5.	<code>Quick Access toolbar</code> is located at the top left corner that contains useful commands.
+5.  <code>Quick Access toolbar</code> is located at the top left corner that contains useful commands.
 </p><p>
-6.	<code>Ribbon</code> has all the commands and various options, organised in  logical  groups.
+6.  <code>Ribbon</code> has all the commands and various options, organised in  logical  groups.
 </p><p>
-7.	<code>Press Enter key</code> to get a blank line or to create new paragraph.
+7.  <code>Press Enter key</code> to get a blank line or to create new paragraph.
 </p><p>
-8.	<code>Status bar</code> on the lower-most bar provides information about current page number, total pages in the document, documents views and a zoom button.
+8.  <code>Status bar</code> on the lower-most bar provides information about current page number, total pages in the document, documents views and a zoom button.
 </p><p>
-9.	<code>When the insertion point reaches the right margin,</code> 
+9.  <code>When the insertion point reaches the right margin,</code> 
 it automatically moves to the next line as you continue typing. This feature is known as word wrapping.
  </p><p>
-10.	<code>To show or hide nonprinting characters,</code> click the Non-printing characters icon at the Home tab of the top toolbar.
+10. <code>To show or hide nonprinting characters,</code> click the Non-printing characters icon at the Home tab of the top toolbar.
 </p><p>
-11.	<code>To save a document,</code> Click on office button > click Save or Save as button.
+11. <code>To save a document,</code> Click on office button > click Save or Save as button.
 </p><p>
-12.	<code>Before saving,</code> a Word document resides on primary memory.
+12. <code>Before saving,</code> a Word document resides on primary memory.
 </p><p>
-13.	<code>Editing text</code> simply means making changes in the existing document.
+13. <code>Editing text</code> simply means making changes in the existing document.
 </p><p> 
-14.	<code>To rectify a mistake, </code>you can use delete key, backspace key, select incorrect word and retype.
+14. <code>To rectify a mistake, </code>you can use delete key, backspace key, select incorrect word and retype.
 </p><p>
-15.<code>	Print preview </code>shows how a document would look when printed.
+15.<code> Print preview </code>shows how a document would look when printed.
 </p><p>
-16.	<code>To print the document,</code> you can press Ctrl + P from the keyboard or go to Office button > click print.
+16. <code>To print the document,</code> you can press Ctrl + P from the keyboard or go to Office button > click print.
 </p><p>
-17.	<code>In order to close a document,</code> click office button > click on close. 
+17. <code>In order to close a document,</code> click office button > click on close. 
 
 </p><p>
 18. <code>In order to  quit Word, </code>click office button > click Exit Word button.
@@ -226,59 +226,68 @@ it automatically moves to the next line as you continue typing. This feature is 
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Status bar is a bar at the ________ of the screen => bottom
 </p><p>
-2. 
+2. Cursor position is the => Type head
 </p><p>
-3. 
+3. The valid Minimum and maximum zoom size in MS Office is => 10, 500 <br>
+Note: <em>Microsoft Office word zoom size hi 10%-500%  a ni a, excel leh powerpoint hi 10%-400% a ni thung. </em>
 </p><p>
-4. 
+4. MS Office was developed by => Microsoft
 </p><p>
-5. 
+5. In MS Office, enter key is used to go to => Start new paragraph
 </p><p>
-6. 
+6. Microsoft developed MS Office in the year => 1st Aug 1988
 </p><p>
-7. 
+7. Which of these toolbar allows changing font and their size? => Formatting
 </p><p>
-8. 
+8. Standard toolbar has ________ for the most frequently used commands in words => Icon
 </p><p>
-9. 
+9. ________ has icons for the most frequently used command => Standard toolbar
 </p><p>
-10. 
+10. The drawing toolbar helps in drawing objects in a => Word Document <br>
+{ a) Word Document c) Power Point Presentation b) Excel spreadsheet d) All of the above }
 </p><p>
-11. 
+11. The most frequently used commands/tools are displays in => Standard Toolbar
 </p><p>
-12. 
+12. Status bar shows the page number on which you are working at.
 </p><p>
-13. 
+13. ________ shows margin and tab setting => Ruler
 </p><p>
-14. 
+14. ________ refers to the setting the page size, page orientation and page margin => Page setting
 </p><p>
-15. 
+15. Tab positions are arranged in the ________ => Ruler
 </p><p>
-16. 
+16. Symbols and special characters can retrieve from ________ menu => Insert
 </p><p>
-17. 
+17. The dialog box displays the number of pages, characters,
+paragraphs and lines included in the word document => Word count option
 </p><p>
-18. 
+18. The process of adjusting the spacing between characters in a proportional font is also called ________ => Kerning
 </p><p>
-19. 
+19. Format menu change the character and paragraph settings.
 </p><p>
-20. 
+20. The character and paragraph settings are manipulated from ________ => Format menu
 </p><p>
-21. 
+21. Existing file can be retrieved from ________ => File menu
 </p><p>
-22. 
+22. Name this sign <img src="/img/clearFormatting.jpg"> => Clear Formatting
 </p><p>
-23. 
+23. <img src="/img/optionButton.jpg"> represent => Option buttons
 </p><p>
-24. 
+24. Save as box points to the location where you save the document/sheet.
 </p><p>
-25. 
+25. To save your work, press ________ => Ctrl + S
 </p><p>
-26. 
+26. To change the file name and or location of the file of saved filed after editing we use => Save as
 </p><p>
-27. 
+27. F12 is used to open ________ dialogue box => Save as
+</p><p>
+28. Print shortcut key is => Ctrl + P
+</p><p>
+29. <img src="/img/printPreviewButton.jpg"> represent => Print preview
+</p><p>
+30. <img src="/img/changeCase.jpg"> represent => Change Case
 </p>
 
              
