--- a/views/dca103onlineclasschapter10.ejs
+++ b/views/dca103onlineclasschapter10.ejs
@@ -218,11 +218,30 @@ worksheet, exiting Excel) (1 MARK)
 
 15.	The first cell in a spreadsheet is A1.
 </p>
-
-
-
-
-                      </p>
+<hr>
+<p>
+  <b>OLD QUESTION:</b>
+</p><p>
+1. Spreadsheet is also known as => MS Excel
+</p><p>
+2. A collection of worksheets is called ________ => Workbook
+</p><p>
+3. Excel comprises a total of 16,384 columns and 1,048,576 rows.
+</p><p>
+4. The cell on which you click is the ________ => Active cell
+</p><p>
+5. In a worksheet, text is left aligned in a cell whereas numeric data is right aligned.
+</p><p>
+6. To save your work, press ________ => Ctrl + S
+</p><p>
+7. To change the file name and or location of the file of saved filed
+after editing we use => Save as
+</p><p>
+8. F12 is used to open ________ dialogue box => Save as
+</p><p>
+9. In which pull down menu 'Close' command is present? => File <br>
+<em>Note: Msword 2007 version-ah chuan file menu hi a awm lo va, Office button tiin an thlak.</em>
+</p>
              
                       </div>
                   
