--- a/views/dca103onlineclasschapter13.ejs
+++ b/views/dca103onlineclasschapter13.ejs
@@ -173,7 +173,6 @@ a worksheet) (3 MARKS)
                       <p class="fw-light rounded">
                         
 <p><em> EDITING A WORKSHEET, FORMATTING AND PRINTING A WORKSHEET (3 MARKS) </em></p>
-
 <p>
 1.	<code>Editing</code> means making changes to an existing worksheet, like  adding  new data, deleting data, correcting data, etc.
 </p><p>
@@ -204,93 +203,63 @@ shortcut menu.
 9.	If you insert a new column between Columns C and D, the data previously on Column D is found on Column E.
 </p>
 <p>
-  <b>Printing</b>
+  <b>Printing</b><br>
+<code>Print one or several worksheets</code><br>
+1. Select the worksheets that you want to print. <br>
+2. Click File > Print, or press CTRL+P.<br>
+3. Click the Print button or adjust Settings before you click the Print button.<br>
 </p><p>
-<code>Print one or several worksheets</code>
-
+<code>Print one or several workbooks</code><br>
+1. All workbook files that you want to print must be in the same folder.<br>
+2. Click File > Open.<br>
+3. Hold down CTRL click the name of each workbook to print, and then click Print.<br>
 </p><p>
-Select the worksheets that you want to print. <br>
+<code>Print all or part of a worksheet</code><br>
+1. Click the worksheet, and then select the range of data that you want to print.<br>
 
-Click File > Print, or press CTRL+P.<br>
+2. Click File, and then click Print.<br>
 
-Click the Print button or adjust Settings before you click the Print button.<br>
-</p><p>
-<code>Print one or several workbooks</code>
-</p><p>
-All workbook files that you want to print must be in the same folder.<br>
-
-Click File > Open.<br>
-
-Hold down CTRL click the name of each workbook to print, and then click Print.<br>
-</p><p>
-<code>Print all or part of a worksheet</code>
-</p><p>
-Click the worksheet, and then select the range of data that you want to print.<br>
-
-Click File, and then click Print.<br>
-
-Under Settings, click the arrow next to Print Active Sheets and select the appropriate option.<br>
+3. Under Settings, click the arrow next to Print Active Sheets and select the appropriate option.<br>
 
 </p>
+<hr>
 <p>
-  <b>OLD QUESTION:</b>
+  <b>OLD QUESTION:</b><br>
+1. In MS Excel F2 function key is use to => Edit cell value
 </p><p>
-1. 
+2. A4 size paper dimension is => 8.27" X 11.69"
 </p><p>
-2. 
+3. Function key for editing cell to alter its content we press => F2
 </p><p>
-3. 
+4. To edit cell value, ________ is the key that similarly functions as the mouse double click => F2
 </p><p>
-4. 
+5. <img src="/img/deleteExcel.jpg"> represents => All of the above <br>
+{ 1) Delete sheet rows 2) Delete sheet Columns 3) Delete sheet 4) All of the above }
 </p><p>
-5. 
+6. Underlined letter in the menu bar is activated by which key? => F10
 </p><p>
-6. 
+7. Print shortcut key is => Ctrl + P
 </p><p>
-7. 
+8. In MS Excel, when enter key is press, the cursor moves => Downward
 </p><p>
-8. 
+9. MS Excel 2007 file extension is => xlsx
 </p><p>
-9. 
+10. A ghosted text behind the content of the page is called => watermark
 </p><p>
-10. 
+11. Shift+F3 (Change case) do not function in MS Excel.
 </p><p>
-11. 
+12. Summation of values possible in MS Excel from => All of the above <br>
+{ 1) Different cell value 3) Values from column 2) Values from row 4) All of the above }
 </p><p>
-12. 
+13. To replace cell in MS Excel, we use => Ctrl + H
 </p><p>
-13. 
+14. For tabulation and for calculation => MS Excel is more useful than MS Word
 </p><p>
-14. 
+15. In excel sheet addition/ summation is done using ________ expression => All of the above <br>
+{ a) =A1+A2+A3+A4 c) +A1+A2+A3+A4 b) =Sum(A1:A4) d) All of the above }
 </p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+16. To keep a portion of the sheet visible while the rest of the sheet scrolls is +. Freeze
 </p>
-
-             
                       </div>
                   
                   </div>
