--- a/views/dca103onlineclasschapter14.ejs
+++ b/views/dca103onlineclasschapter14.ejs
@@ -129,7 +129,7 @@ Conditional function) (2 MARKS)
                          
                          <figure class="figure">
   
-                         <img src="/img/statisticalfunction.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="540" alt="statisticalfunction" />
+                         <img src="/img/statisticalfunction.jpg" class="float-end img-fluid ps-2 pb-2" alt="statisticalfunction" />
                                     
                           <figcaption class="figure-caption ps-2 text-danger"> Statistical Function (Count) </figcaption>
                                     
@@ -174,114 +174,102 @@ Conditional function) (2 MARKS)
 </p><p>
 2.	Some commonly used functions are<code> SUM(), AVERAGE(), MAX(), MIN(), COUNT().</code>
 </p><p>
-
 3.	<code>IF()</code> is conditional function; it evaluates a condition and takes one of two specified actions.
 </p><p>
-
 4.	The example format for IF() function is: =IF(A1 >= 33%, “PASS”, “FAIL”).
 </p><p>
-
 5.	A1:A5 represents a<code> range.</code>
 </p><p>
-
 6.	MAX(): to find the largest number in a range.
 </p><p>
-
 7.	MIN(): to find the smallest number in a range.
 </p><p>
-
 8.	COUNT(): to find the physical count of entries in a range.
 </p><p>
-
 9.	<code>SUM(C6:H6)</code> is equal to =C6+D6+E6+F6+G6+H6
 </p><p>
-
 10.	Sizing handle which is a handle in the lower right corner can be dragged to resize the table.
 </p><p>
-
 11.	Sorting means arranging data in ascending or descending order.
 </p><p>
-
 12.	AutoSum button is in the Editing group of Home tab.
 </p><p>
-
 13.	Total Row is a special row that gives access to a variety of functions (such as AVERAGE, SUM, etc.)
 </p><p>
-
-
 14.	By default, a table has a header row. The header row of a table has filtering and sorting capabilities.
 </p><p>
-
 15. Every column has filtering enabled in the header row to filter or sort table data quickly.
 </p><p>
-
 16.	A calculated column can be created by entering a formula in one cell; the formula is automatically applied to the entire column.
 </p><p>
-
 17.	Table is a button under Insert Tab.
 </p><p>
-
 18.	Table Styles is a button under Design tab.
 </p><p>
-
 19.	Font is a group under Home Tab.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. <img src="/img/insertFormulaButton.jpg"> represents => Insert Function
 </p><p>
-2. 
+2. The function executes if and only if the condition statement is true => IF()
 </p><p>
-3. 
+3. The sum ( ) function has => More than one argument <br>
+Note: <em>Braket () hi function/method an ti a, a chhunga number or data awm hi argument an ti.</em>
 </p><p>
-4. 
+4. Sum ( ) function has how many argument(s)? => more than one
 </p><p>
-5. 
+5. How many argument is needed in the =SUM() function? => Depends on size
 </p><p>
-6. 
+6. <img src="/img/autoSum.jpg"> represents => AutoSum
 </p><p>
-7. 
+7. Summation of values from multiple sheet is not possible in MS Excel => False
 </p><p>
-8. 
+8. A series if number can easily be added up using => AutoSum
 </p><p>
-9. 
+9. The sum ( ) function has more than one argument => True
 </p><p>
-10. 
+10. Given: Cell A1 to A10 values. Then, formula to find average is => =AVERAGE(A1:A10)
 </p><p>
-11. 
+11. Given cell A1=10; b1=5. Then, FX=B1/A1*100 give the => Percentage
 </p><p>
-12. 
+12. A1 to J1 contains mark obtained by CCA student June 2016
+Exam. What is the average mark obtained? => Fx=Average(A1:J1) <br>
+{ a. Fx=average(A1 to J1) c. Fx=Average(A1;J1) b. Fx=average(A1,J1) d. Fx=Average(A1:J1) }
 </p><p>
-13. 
+13. Average is calculated using => =Average(C6:G6)
 </p><p>
-14. 
+14. A1 to A10 contains an array of marks Obtained by DCA studentsJune
+2018 Exam. Find the higher mark Obtain? => =MAX(A1:A10) <br>
+{ a) =HIGH(A1:A10) c) =HIGH(A1-A10) b) =MAX(A1:A10) d) =MAX(A1-A10) }
+
 </p><p>
-15. 
+15. To select all, which key is used? => Ctrl + A
 </p><p>
-16. 
+16. From the list of value C6 to C14 largest number is formed using => =MAX(C6:C14) 
 </p><p>
-17. 
+17. <img src="/img/conditionalFormatting.jpg"> represents => Conditional Formatting
 </p><p>
-18. 
+18. Given: cell A1=1; then, IF(A1 < 10,"1 digit","2 or more digits"), What is the output? =><b> 1 digit</b> <br>
+{ a) 1 digit c) No output b) 2 or more digits d) Both (a) and (b) } <br>
+Note: <em>IF() hi excel function chi khat a ni a, if() chhunga condition azirin answer a rawn insiam thin. Tunah hian A1 chu 1 a ni a,
+tichuan, 1 < 10 (1 is less than 10) a ti a. Chu chu a dik (true) avangin a piah chiaha 1 digit chu a display tawp mai a ni. 1 > 10 chu ni se,
+a dik lo (false) dawn a, 2 or more digits tih hi a in display tawp thung ang.</em>
+<img src="/img/ifCondition.jpg" class="img-fluid">
 </p><p>
-19. 
+19. Given: cell A1=10; then IF(A1 < 10,"1 digit", "2 or more digits"), what is the output? => <b>2 or more digits</b> <br>
+{ a. 1 digit c. No Output b. 2 or more digit d. Both a & b  }
 </p><p>
-20. 
+20. =IF(A1 < B1,"A1 is greater than B1","") give ________ as output. (Given that
+Cell A1=5 and B1=7) => <b>A1 is greater than B1 </b><br>
+{ 1) A is greater than B 3) A and B are equal 2) B is greater than A 4) Print nothing }
 </p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+21. If mark obtained is 85 or above it is graded "outstanding" else it is
+graded passed. What is the output of the IF statement? <em>=IF(G6 > 85,"outstanding","Passed").</em> 
+Given: student X's mark Obtained is 72 => <b>Passed</b> <br>
+{ a) Outstanding c) Passed b) First division d) Second division }
 </p>
 
              
