--- a/views/dca103onlineclasschapter16.ejs
+++ b/views/dca103onlineclasschapter16.ejs
@@ -211,62 +211,35 @@ charts, Updating charts, changing the chart type, previewing and printing charts
 
 13.	Print Preview is used to preview the chart before printing it.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. A ________ is a visual representation of numeric data => Chart
 </p><p>
-2. 
+2. Name this sign <img src="/img/pieChart.jpg"> => Pie Chart
 </p><p>
-3. 
+3. MS Excel chart sheet is also use in => Ms word and Ms powerpoint
 </p><p>
-4. 
+4. Name this sign <img src="/img/columnChart.jpg"> => Column Chart
 </p><p>
-5. 
+5. Name this sign <img src="/img/increaseAndDecreaseDecimal.jpg"> => Increase and Decrease Decimal
 </p><p>
-6. 
+6. Pie chart is one of many pictorial representation of => numeric data
 </p><p>
-7. 
+7. You can change a chart type to any other type and embed that into your workbook => True
 </p><p>
-8. 
+8. Circular representation of graph in MS Office is called => Pie Chart
 </p><p>
-9. 
+9. ________ are limited to one data series => Pie Chart
 </p><p>
-10. 
+10. Identify this column chart <img src="/img/stackedChart.jpg"> => Stacked
 </p><p>
-11. 
+11. When the selection is one with multiple rows/columns it is called => Data series
 </p><p>
-12. 
+12. Multiple drawing objects are ________ to form one object => Group
 </p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+13. Underlined letter in the menu bar is activated by ________ key => Alt or F10
 </p>
 
              
