--- a/views/dca103onlineclasschapter2.ejs
+++ b/views/dca103onlineclasschapter2.ejs
@@ -118,14 +118,14 @@ footers and page numbers) (2 MARKS)
 
                     <div class="accordion-body">
             
-                         <p>Formatting tih awmzia chu kan thu type leh hawrrawp tihdanglamna kha a ni a. A changin hawrrawp chhah (bold)
+                         <p>Formatting tih awmzia chu kan thu type (hawrrawp) tihdanglamna kha a ni a. A changin hawrrawp chhah (bold)
                          kan hmang thei a, hawrrawp tlu (italic) kan hmang thei a, underline te, thaichhiat (strikethrough) te kan hmang thei bawk a.
                          Kan duh chuan a thla hlim shadow kan pe thei a, a colour leh a font style kan tidanglam thei bawk a ni.</p>
                          
                          
                          <figure class="figure">
   
-                          <img src="/img/formattingDocument.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="540" alt="formattingDocument" />
+                          <img src="/img/formattingDocument.jpg" class="float-end img-fluid ps-2 pb-2" alt="formattingDocument" />
                           
                           <figcaption class="figure-caption ps-2 text-danger"> Formatting Document </figcaption>
                           
@@ -217,59 +217,52 @@ footers and page numbers) (2 MARKS)
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. ________ refers to the formats that effect the appearance of the individual characters => Text style
 </p><p>
-2. 
+2. Font size are measured in ________ => Points
 </p><p>
-3. 
+3. Which of these toolbar allows changing font and their size? => Formatting
 </p><p>
-4. 
+4. Which of the following shortcut keys changes the font size? =>  Ctrl + }
 </p><p>
-5. 
+5. Name this sign <img src="/img/characterStyle.jpg"> => Change Styles
 </p><p>
-6. 
+6. Name this sign <img src="/img/sortButton.jpg"> => Sort
 </p><p>
-7. 
+7. Name this  sign <img src="/img/nonPrintingCharacter.jpg"> => Show paragraph marks and other hidden formatting symbols
 </p><p>
-8. 
+8. Name this  sign <img src="/img/findButton.jpg"> => Find
 </p><p>
-9. 
+9. ________ lets you copy a format applied in one section of a document to other portion of the document => Format painter
 </p><p>
-10. 
+10. Name this  sign <img src="/img/formatPainter.jpg"> => Format Painter
 </p><p>
-11. 
+11. To select multiple lines vertically in MS word what key
+combination with mouse is use => Ctrl
 </p><p>
-12. 
+12. Word has ________ alignment where as excel has three alignment => 4
 </p><p>
-13. 
+13. Alignment can also be made using ________ => Indentation
 </p><p>
-14. 
+14. Alignment can also be made using ________ => All of the above <br>
+{ 1) Tab position tools 3) Alignment tools 2) Indentation 4) All of the above }
 </p><p>
-15. 
+15. Text alignment in word document is of ________ types => 4
 </p><p>
-16. 
+16. Header and Footer appears in which menu _______ => Insert
 </p><p>
-17. 
+17. Footer appear at the bottom of ________ page(s) once inserted => All pages.
 </p><p>
-18. 
+18. Page Number appears on all pages once inserted.
 </p><p>
-19. 
+19. The status bar displays the => All of the above <br>
+{ a) Current page number c) Live and column number b) Total number of page d) All of the above }
 </p><p>
-20. 
+20. To undo the last action, Ctrl+Z is use.
 </p><p>
-21. 
+21. MS office word zoom range is 10 to 500.
 </p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+22. In MS Word, Typing '=rand (4,2)' gives ________ => 4 paragraphs and 2 sentences of text
 </p>
 
              
