--- a/views/dca103onlineclasschapter20.ejs
+++ b/views/dca103onlineclasschapter20.ejs
@@ -193,62 +193,23 @@ sound effects, Setting slide timings, Rehearse timings, Grouping and ungrouping 
 </p><p>
 15.	In Date & Time dialogue box, date, slide number and footer adjustment can be made.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Adding special effect to a ppt enhance the ________ of the presentation => Effectiveness
 </p><p>
-2. 
+2. Transitions that are applied to the element of the slide is also called => Animation
 </p><p>
-3. 
+3. Animation is also known as _______ in PowerPoint => Transition
 </p><p>
-4. 
+4. Animation is also known as => Transition
 </p><p>
-5. 
+5. Animation are _______ that are applied to the elements on a slide => Transitions
 </p><p>
-6. 
+6. Slide Timing can be set for => All Slides Collectively
 </p><p>
-7. 
-</p><p>
-8. 
-</p><p>
-9. 
-</p><p>
-10. 
-</p><p>
-11. 
-</p><p>
-12. 
-</p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+7. Slide timing can be set for => One slide and Group of slides
 </p>
 
              
