--- a/views/dca103onlineclasschapter6.ejs
+++ b/views/dca103onlineclasschapter6.ejs
@@ -123,7 +123,7 @@ setting, Format painter, Inserting symbols, Using supersript and subscript) (1 M
                          
                          <figure class="figure">
   
-                                    <img src=" /img/improvinglook.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="540" alt="improvinglook" />
+                                    <img src=" /img/improvinglook.jpg" class="float-end img-fluid ps-2 pb-2" alt="improvinglook" />
                                     
                                     <figcaption class="figure-caption ps-2 text-danger"> Some Tools for Improving the Look of a Document </figcaption>
                                     
@@ -204,68 +204,55 @@ Letter, Legal, Executive, B5, etc.
 </p><p>
 
 13.	<code>Symbols</code> can either be inserted using the Insert Symbol button on  the  Symbols group on the Insert tab or by typing the shortcut  keys or  codes  on  the keyboard.
-</p><p>
+
+
+</p>
+<figure class="figure">
+  
+ <img src="/img/mswordSymbol.jpg" class="float-end img-fluid" alt="symbol" />
+                                    
+ <figcaption class="figure-caption ps-2 text-danger"> Ms word Symbol </figcaption>
+                                    
+  </figure>
+                                    <p>
 
 14.	You can create smiley ☺ by typing :) or :-). (c) for ©, (r) for ®, --> for >, ==>
 for >, <=> for #, etc.
 
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Word has ________ predefined bullet types => 6
 </p><p>
-2. 
+2. ________ refers to the setting the page size, page orientation and page margin.
 </p><p>
-3. 
+3. Copying a format applied to one section of a document to
+another portion of the document is => Format painter
 </p><p>
-4. 
+4. When you want to copy formatting from one item to another we use =>  Format Painter
 </p><p>
-5. 
+5. Symbols and special characters can retrieve from => Insert
 </p><p>
-6. 
+6. <img src="/img/subscriptSuperscript.jpg"> represent => subscript and superscript
 </p><p>
-7. 
+7. ________ shows margin and tab setting => Ruler
 </p><p>
-8. 
+8. <img src="/img/centerTab.jpg"> represent => Center tab
 </p><p>
-9. 
+9. Tab positions are arranged in the ________ => Ruler
 </p><p>
-10. 
+10. Horizontal page orientation is also called => Landscape
 </p><p>
-11. 
-</p><p>
-12. 
-</p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+  11. Portrait and landscape are => page orientation
+  </p><p>
+    12. Vertical page orientation is called => Portrait
+    </p><p>
+      13. Page orientation is of ________ types => Two
+      </p><p>
+        14. There are two type of page orientation.
+        
 </p>
 
              
