--- a/views/dca103onlineclasschapter8.ejs
+++ b/views/dca103onlineclasschapter8.ejs
@@ -85,7 +85,7 @@
                         
                         <em>
                          
-                        Inserting Table (Understanding tables, TableAutoFormat) (2 MARKS)
+                        Inserting Table (Understanding tables, Table Auto Format) (2 MARKS)
                   
                         </em> 
             
@@ -193,62 +193,30 @@
 </p><p>
 14.	The text entered within a cell wraps to the next line when it reaches the cell’s limit. The cell automatically enlarges vertically to fit the text.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Table is formed by a combination of _______ => row and column
 </p><p>
-2. 
+2. The insert table button is usd to insert table in a word document => Blank <br>
+{ a. Blank c. Auto-format b. Existing d. None of the above }
 </p><p>
-3. 
+3. Combination of rows and columns yield => table
 </p><p>
-4. 
+4. The tables and borders toolbar has number of components they are => Border style button, line style box, shading box
 </p><p>
-5. 
+5. Cells in a table can be merge using ________ button => Merge cells
 </p><p>
-6. 
+6. Table is form by a combination of => Row and Column
 </p><p>
-7. 
+7. Cell is the intersection of ________ => column and row
 </p><p>
-8. 
+8. Merge cells join the => column and row
 </p><p>
-9. 
+9. Combining of two or mare rows or columns is => Merging
 </p><p>
-10. 
-</p><p>
-11. 
-</p><p>
-12. 
-</p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+10. Intersection of row and column of a particular place is called => Cell
 </p>
 
              
