--- a/views/dca103onlineclasschapter9.ejs
+++ b/views/dca103onlineclasschapter9.ejs
@@ -127,7 +127,7 @@ Merging documents) (3 MARKS)
                         
                         <figure class="figure">
   
-                         <img src="/img/mailMerge.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="540" alt="mailMerge" />
+                         <img src="/img/mailMerge.jpg" class="float-end img-fluid ps-2 pb-2" alt="mailMerge" />
                                     
                           <figcaption class="figure-caption ps-2 text-danger"> Mail Merge </figcaption>
                                     
@@ -167,100 +167,62 @@ Merging documents) (3 MARKS)
 <p><em>MAIL MERGE(3 MARKS) : </em></p>
 
 <p>
-1.	<code>Mail Merge</code> is a tool to produce multiple copies of a document.
+1.  <code>Mail Merge</code> is a tool to produce multiple copies of a document.
 </p><p>
 
-2.	<code>Start Mail Merge group</code> is in Mailings Tab.
+2.  <code>Start Mail Merge group</code> is in Mailings Tab.
 </p><p>
 
-3.	<code>Mail Merge</code> allows merging a master document and a data source.
+3.  <code>Mail Merge</code> allows merging a master document and a data source.
 </p><p>
 
-4.	<code>The master document</code> contains the body of  the letter  with placeholders for  the variable information.
+4.  <code>The master document</code> contains the body of  the letter  with placeholders for  the variable information.
 </p><p>
 
-5.	<code>The data source</code> is a database, which has the variable information.
+5.  <code>The data source</code> is a database, which has the variable information.
 </p><p>
 
-6.	The main or the master document is created by using Start Mail Merge button, in Start Mail Merge group, under Mailing tab.
+6.  The main or the master document is created by using Start Mail Merge button, in Start Mail Merge group, under Mailing tab.
 </p><p>
 
-7.	The different heads of information in each record are called fields.
+7.  The different heads of information in each record are called fields.
 </p><p>
 
-8.	In field names, spaces are not allowed and the first character must be an alphabet.
+8.  In field names, spaces are not allowed and the first character must be an alphabet.
 </p><p>
 
-9.	<code>In the master document,</code> the merge field names enclosed by << >> act as
+9.  <code>In the master document,</code> the merge field names enclosed by << >> act as
 placeholders.
 </p><p>
 
-10.	To merge the master document and data source, click on Finish and Merge
+10. To merge the master document and data source, click on Finish and Merge
 button.
 </p><p>
 
-11.	Master document and merged documents can be separately saved.
+11. Master document and merged documents can be separately saved.
 </p><p>
 
-12.	The data source is saved as an <code>Access database. </code>Starting with Access 2007,
+12. The data source is saved as an <code>Access database. </code>Starting with Access 2007,
 <code>.accdb</code> is the default Access file format.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. In a master document is the one which contain the recipients
+of the letter with place holders for the variable information => Mail merge
 </p><p>
-2. 
+2. Mail merge is use to send or print => multiple letter
 </p><p>
-3. 
+3. Mail merge recipients is limited to => unlimited
 </p><p>
-4. 
+4. Mail merge includes merging of ________ separate documents => 2
 </p><p>
-5. 
+5. ________ is used to create multiple documents at once => Mail merge
 </p><p>
-6. 
+6. Data source is by default saved in ________ => My documents
 </p><p>
-7. 
-</p><p>
-8. 
-</p><p>
-9. 
-</p><p>
-10. 
-</p><p>
-11. 
-</p><p>
-12. 
-</p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+7. A data source is a document that has the ________ information => variable
 </p>
 
              
