--- a/views/dca103onlineclasschapter11.ejs
+++ b/views/dca103onlineclasschapter11.ejs
@@ -189,62 +189,41 @@ calculations using formula, concept of worksheets and workbook) (2 MARKS)
 
 8.	A sheet can be renamed and deleted by right-clicking on its tab and choosing the required option.
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Ctrl + O is used to _________ existing file => Open
 </p><p>
-2. 
+2. Open shortcut key is => Ctrl + O
 </p><p>
-3. 
+3. Ctrl+N open new blank document in: => All of the above <br>
+{ a. MS excel c. MS power point b. MS word d. All of the above }
 </p><p>
-4. 
+4. Ctrl+N open new document/slide/sheet.
 </p><p>
-5. 
+5. F12 is used to open ________ dialogue box => Save as
 </p><p>
-6. 
+6. Excel recognizes and entry as formula if it is preceded by a ________ =>  + or =
 </p><p>
-7. 
+7. Formulae must be preceded by => =
 </p><p>
-8. 
+8. Name this sign <img src="/img/insertFormulaButton.jpg"> => Insert Function
 </p><p>
-9. 
+9. Formulae must be preceded by ________ sign in excel => =
 </p><p>
-10. 
+10. A collection of worksheets is called => Workbook
 </p><p>
-11. 
+11. Text excel spread sheet is ________ by default => left aligned
 </p><p>
-12. 
+12. <img src="/img/orientationExcel.jpg"> represent => Orientation (or Text orientation)
 </p><p>
-13. 
+13. A series if number can easily be added up using => Autosum
 </p><p>
-14. 
+14. Which formula joins several text strings into one text string => Concatenate
 </p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+15. Moving sheet to another sheet location is done using ________ key => Alt + Mouse drag <br>
+Note: <em>Sheet dangah i thil chhut i move duh chuan mouse hmanga i pawh tawlh laiin ALT key i hmehbeh a ngai tihna a ni. </em>
 </p>
 
              
