--- a/views/dca103onlineclasschapter12.ejs
+++ b/views/dca103onlineclasschapter12.ejs
@@ -119,7 +119,7 @@ referencing) (2 MARKS)
                          
                          <figure class="figure">
   
-                         <img src="/img/cellReferencing.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="540" alt="Cell Referencing" />
+                         <img src="/img/cellReferencing.jpg" class="float-end img-fluid ps-2 pb-2" alt="Cell Referencing" />
                                     
                           <figcaption class="figure-caption ps-2 text-danger"> Cell Referencing </figcaption>
                                     
@@ -185,59 +185,18 @@ referencing) (2 MARKS)
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Absolute referencing is => $E$1
 </p><p>
-2. 
+2. Reference that change automatically when you copy them to a new cell are called ________ => Relative Reference
 </p><p>
-3. 
+3. Which one of this is an example of 'Absolute referencing' => $E$1 <br>
+{ a. E$1 c. $E1 b. $E$1 d. Both a & c }
 </p><p>
-4. 
+4. MS Excel use relative reference => True
 </p><p>
-5. 
+5. Excel follows relative reference => True
 </p><p>
-6. 
-</p><p>
-7. 
-</p><p>
-8. 
-</p><p>
-9. 
-</p><p>
-10. 
-</p><p>
-11. 
-</p><p>
-12. 
-</p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+6. By default all references in MS Excel are ________ reference => Relative
 </p>
 
              
