--- a/views/dca103onlineclasschapter17.ejs
+++ b/views/dca103onlineclasschapter17.ejs
@@ -193,62 +193,42 @@ Different types of slide layouts, Getting started, Creating a presentation) (3 M
  
 12.	PowerPoint slides are saved with the extension <code>.pptx.</code>
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. ________ is the extension for Powerpoint presentation => pptx
 </p><p>
-2. 
+2. PowerPoint offer ________ different types of slide layouts called Auto Layouts => 24
+
 </p><p>
-3. 
+3. Microsoft Powerpoint is => Presentation Program
 </p><p>
-4. 
+4. Microsoft word is => Word processor
 </p><p>
-5. 
+5. Powerpoint presentation is not equippes with Autosum command => True
 </p><p>
-6. 
+6. Powerpoint presentation uses different Clipart which the word
+and Excel does not have => False
 </p><p>
-7. 
+7. To make a table in MS Powerpoint Presentation Row is more
+important than that of column => False
 </p><p>
-8. 
+8. To draw a chart in MS Powerpoint Presentation MS Excel
+worksheet is link => True
 </p><p>
-9. 
+9. Print what: combo box is present in _______ print dialog box => All of the above <br>
+{ a. MS Word c. Ms PowerPoint b. Ms Excel d. All of the above }
 </p><p>
-10. 
+10. To make a table in MS PowerPoint Presentation => Row and Column have equal importance
 </p><p>
-11. 
+11. <img src="/img/arrangePowerpoint.jpg"> represents => Arrange
 </p><p>
-12. 
+12. To insert new slide; which of the following key is used? => Ctrl+M
 </p><p>
-13. 
+13. <img src="/img/newSlide.jpg"> represents => New Slide
 </p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+14. Ctrl+M in power point open new slide => True
 </p>
 
              
