--- a/views/dca103onlineclasschapter18.ejs
+++ b/views/dca103onlineclasschapter18.ejs
@@ -189,62 +189,40 @@ Normal view further gives the options of Slide and Outline views.
 </p><p>
 9.	To terminate a slide show in between, press <code>Esc</code> key
 </p>
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Which one allows you to work on individual slides => Slide view
 </p><p>
-2. 
+2. ________ is a miniature view of slides => Slide sorter
 </p><p>
-3. 
+3. <img src="/img/slideSorter.jpg"> represents => Slide sorter view
 </p><p>
-4. 
+4. ________ allows you to organize the order and status of the slides in
+your presentation => Slide sorter view
 </p><p>
-5. 
+5. The header and footer tools is activated via the => View menu <em>(2007 version-ah chuan Insert Tab tih chu a chhanna dik a ni.)</em>
 </p><p>
-6. 
+6. Status bar is a bar at the ________ of the screen => Bottom
 </p><p>
-7. 
+7. Status bar shows the page number on which you are working at => True
 </p><p>
-8. 
+8. Slide show is activated by ________ key => F5
 </p><p>
-9. 
+9. In PowerPoint presentation F5 is used to => Slide show
 </p><p>
-10. 
+10. Shortcut key for Spelling and Grammar is => F7
 </p><p>
-11. 
+11. Which key change the text cases? => Shift + F3
 </p><p>
-12. 
+12. Shift+F5 slide show the presentation => True
 </p><p>
-13. 
+13. To slide show the presentation, which key is use? => F5
 </p><p>
-14. 
+14. <img src="/img/slideShowFromBeginning.jpg"> represents => Start slide show from the beginning
 </p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+15. ________ is used to end slide show => Esc
 </p>
 
              
