--- a/views/dca103onlineclasschapter19.ejs
+++ b/views/dca103onlineclasschapter19.ejs
@@ -188,63 +188,17 @@ option available under the Background group in the Design tab.
 10.<em> Excel leh powerpoint zoom percentage hi 10% - 400%  a ni a. Microsoft word chu 10%-500% a ni thung.</em>
 
 </p>
-
+<hr>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Print what: combo box is present in ________ print dialog box => Powerpoint
 </p><p>
-2. 
+2. Print shortcut key is => Ctrl + P
 </p><p>
-3. 
+3. <img src="/img/slideOrientation.jpg"> represent => Slide Orientation
 </p><p>
-4. 
-</p><p>
-5. 
-</p><p>
-6. 
-</p><p>
-7. 
-</p><p>
-8. 
-</p><p>
-9. 
-</p><p>
-10. 
-</p><p>
-11. 
-</p><p>
-12. 
-</p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+4. <img src="/img/slideReset.jpg"> represent => Slide reset
 </p>
 
              
