--- a/views/dca103onlineclasschapter3.ejs
+++ b/views/dca103onlineclasschapter3.ejs
@@ -122,7 +122,7 @@
                          
                                     <figure class="figure">
   
-                                    <img src="/img/autocorrect.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="540" alt="autocorrect" />
+                                    <img src="/img/autocorrect.jpg" class="float-end img-fluid ps-2 pb-2" alt="autocorrect" />
                                     
                                     <figcaption class="figure-caption ps-2 text-danger"> Auto Correct </figcaption>
                                     
@@ -173,59 +173,10 @@ Office button → Word Options → Proofing → AutoCorrect → Replace text as 
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. ________ has a table of common typing errors, which are
+automatically corrected by word => Auto correct
 </p><p>
-2. 
-</p><p>
-3. 
-</p><p>
-4. 
-</p><p>
-5. 
-</p><p>
-6. 
-</p><p>
-7. 
-</p><p>
-8. 
-</p><p>
-9. 
-</p><p>
-10. 
-</p><p>
-11. 
-</p><p>
-12. 
-</p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+2. Common typing/ spelling mistakes in word can be corrected using suggestions => Auto correct
 </p>
 
              
