--- a/views/dca103onlineclasschapter4.ejs
+++ b/views/dca103onlineclasschapter4.ejs
@@ -122,7 +122,7 @@
                          
                                     <figure class="figure">
   
-                                    <img src="/img/spellingCheck.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="540" alt="spellingCheck" />
+                                    <img src="/img/spellingCheck.jpg" class="float-end img-fluid ps-2 pb-2" alt="spellingCheck" />
                                     
                                     <figcaption class="figure-caption ps-2 text-danger"> Spelling and Grammar Check </figcaption>
                                     
@@ -201,59 +201,20 @@ Review tab.
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Shortcut key for Spelling and Grammar is => F7
 </p><p>
-2. 
+2. The ________ dialog box displays the number of pages, characters,
+paragraphs and lines included in the word document => Word count option
 </p><p>
-3. 
+3. The grammar checker mostly suggests ways to correct the => All of the above <br>
+{ a. Paragraph construction c. Words b. Sentence construction d. All of the above }
 </p><p>
-4. 
+4. Open shortcut key is => Ctrl + O
 </p><p>
-5. 
+5. Redo shortcut key is => Ctrl + Y
 </p><p>
-6. 
-</p><p>
-7. 
-</p><p>
-8. 
-</p><p>
-9. 
-</p><p>
-10. 
-</p><p>
-11. 
-</p><p>
-12. 
-</p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+
+6. There are ________ number of default measurement units in MS Word => 5
 </p>
 
              
