--- a/views/dca103onlineclasschapter5.ejs
+++ b/views/dca103onlineclasschapter5.ejs
@@ -126,7 +126,7 @@
                          
                           <figure class="figure">
   
-                                    <img src="/img/findandreplace.jpg" class="float-end img-fluid ps-2 pb-2" width="auto" height="540" alt="findandreplace" />
+                                    <img src="/img/findandreplace.jpg" class="float-end img-fluid ps-2 pb-2" alt="findandreplace" />
                                     
                                     <figcaption class="figure-caption ps-2 text-danger"> Find and Replace Option </figcaption>
                                     
@@ -192,59 +192,18 @@ lowercase and uppercase with uppercase automatically.
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Name this  sign <img src="/img/findButton.jpg"> => Find
 </p><p>
-2. 
+2. The shortcut key to display find and replace option is => Ctrl + H
 </p><p>
-3. 
+3. To change all occurrence of particular word; The replace all option is used.
 </p><p>
-4. 
+4. To change all the occurrences of a particular word which option is used? => Replace all
 </p><p>
-5. 
+5. Replace all option change all the occurrence of a particular word.
 </p><p>
-6. 
-</p><p>
-7. 
-</p><p>
-8. 
-</p><p>
-9. 
-</p><p>
-10. 
-</p><p>
-11. 
-</p><p>
-12. 
-</p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+6. Replace command's shortcut key is => Ctrl + H
+
 </p>
 
              
