--- a/views/dca103onlineclasschapter7.ejs
+++ b/views/dca103onlineclasschapter7.ejs
@@ -113,62 +113,37 @@
 													<p> 9. Tab having picture formatting tools is <code>Format.</code> </p>
 													<p> 10. Number of sizing handles around an inserted image is <code>4.</code> </p>
 													<p> 11. The number of pre-defined styles in WordArt are <code>30.</code> </p>
+													<hr>
 												<p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Clipboards store data => temporarily
 </p><p>
-2. 
+2. <img src="/img/mswordClipart.jpg"> represents => Clipart button
 </p><p>
-3. 
+3. ________ is a picture or graphic that can be inserted into a word
+processed document => Clipart
 </p><p>
-4. 
+4. Data stored in the Clipboard is => temporarily
 </p><p>
-5. 
+5. Using word you can add into your document => All of these <br>
+{ a. Graphic c. Wordart b. Picture d. All of these }
 </p><p>
-6. 
+6. <img src="/img/wordArt.jpg"> represents => WordArt button
 </p><p>
-7. 
+7. The decorative text that you can add to a document => WordArt
 </p><p>
-8. 
+8. Insert menu is used to insert objects. <em>(MsOffice 2007 version-ah chuan Menu hi Tab tia sawi a ni.)</em>
 </p><p>
-9. 
+9. Pictures, Table, Shapes, etc. are inserted from => Insert menu
 </p><p>
-10. 
+10. Object are inserted from ________ => Insert menu
 </p><p>
-11. 
+11. Header and Footer appears in which menu ________ => Insert
 </p><p>
-12. 
+12. Pictures can be group with shapes => True
 </p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+13. Pictures can be deform/resize by ________ tool => Cropping
 </p>
 
 											</div>
